updated flow for indices